tests/models/enum/named/u8/fail/max_items.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(max_items = 2)]
        value: u8
    },
}
fn main() {}
